--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "electron": "^37.3.0",
     "electron-builder": "^26.0.12",
     "eslint": "^9.33.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
