--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "email": "lukaszgil7@gmail.com"
   },
   "scripts": {
-    "dev": "npm-run-all --parallel dev:react dev:electron",
+    "dev": "npm-run-all --parallel dev:react dev:electron scss:types",
     "dev:react": "vite",
     "dev:electron": "npm run transpile:electron && cross-env NODE_ENV=dev electron .",
+    "scss:types": "typed-scss-modules src/ui/**/*.module.scss --exportType named --watch",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -41,6 +42,8 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "npm-run-all": "^4.1.5",
+    "sass-embedded": "^1.93.3",
+    "typed-scss-modules": "^8.1.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2"
