--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "dist:linux": "npm run transpile:electron && npm run build && electron-builder --linux --x64"
   },
   "dependencies": {
+    "@ariakit/react": "^0.4.19",
     "@radix-ui/react-icons": "^1.3.2",
     "date-fns": "^4.1.0",
+    "match-sorter": "^8.1.0",
     "radix-ui": "^1.4.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
