--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ariakit/react": "^0.4.19",
     "@radix-ui/react-icons": "^1.3.2",
     "date-fns": "^4.1.0",
+    "lightweight-charts": "^5.0.9",
     "match-sorter": "^8.1.0",
     "radix-ui": "^1.4.3",
     "react": "^19.1.1",
